<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.motion.widget.MotionLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:padding="16dp"
    app:layoutDescription="@xml/activity_main_scene"
    tools:context=".MainActivity">

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/lottieBreakFast"
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:layout_marginTop="34dp"
        android:padding="@dimen/space_34"
        android:scaleType="centerCrop"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/muslimcouple" />


    <LinearLayout
        android:id="@+id/linerCards"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/space_16"
        android:baselineAligned="false"
        android:orientation="horizontal"
        android:padding="@dimen/space_8"
        android:visibility="invisible"
        app:layout_constraintTop_toBottomOf="@id/athan_times">

        <LinearLayout
            android:id="@+id/cardMorning"
            android:layout_width="0dp"
            android:layout_height="120dp"
            android:layout_marginEnd="@dimen/space_8"
            android:layout_marginBottom="@dimen/space_8"
            android:layout_weight="1"
            android:background="@drawable/card"
            android:orientation="vertical"
            android:padding="@dimen/space_8">

            <TextView
                android:id="@+id/txtPrayer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:text="@string/Al_fajr_prayer"
                android:textColor="@color/time_hint"
                android:textSize="@dimen/text_14" />

            <TextView
                android:id="@+id/txtTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_8"
                android:text="@string/__4.16__am"
                android:textColor="@color/timer_hint"
                android:textSize="@dimen/text_12" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/cardDouher"
            android:layout_width="0dp"
            android:layout_height="120dp"
            android:layout_marginEnd="@dimen/space_8"
            android:layout_marginBottom="@dimen/space_8"
            android:layout_weight="1"
            android:background="@drawable/card"
            android:orientation="vertical"
            android:padding="@dimen/space_8">

            <TextView
                android:id="@+id/txtPrayerDuher"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:text="@string/dhuhr_prayer"
                android:textColor="@color/time_hint"
                android:textSize="@dimen/text_14" />

            <TextView
                android:id="@+id/txtTimeDuher"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_8"
                android:text="@string/__12__20__pm"
                android:textColor="@color/timer_hint"
                android:textSize="@dimen/text_12" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/cardMaghrib"
            android:layout_width="0dp"
            android:layout_height="120dp"
            android:layout_marginBottom="@dimen/space_8"
            android:layout_weight="1"
            android:background="@drawable/card"
            android:orientation="vertical"
            android:padding="@dimen/space_8">

            <TextView
                android:id="@+id/txtPrayerMaghrib"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="start"
                android:text="@string/maghreb_prayer"
                android:textColor="@color/time_hint"
                android:textSize="@dimen/text_14" />

            <TextView
                android:id="@+id/txtTimeMaghrib"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_8"
                android:text="@string/__7__20__pm"
                android:textColor="@color/timer_hint"
                android:textSize="@dimen/text_12" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/cardconstipationTime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_16"
        android:background="@drawable/card"
        android:orientation="horizontal"
        android:padding="@dimen/space_8"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/linerCards">

        <TextView
            android:id="@+id/txtConstipation"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="start"
            android:text="@string/constipation_time"
            android:textColor="@color/time_hint"
            android:textSize="@dimen/text_14" />

        <TextView
            android:id="@+id/txtConTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:text="@string/__4h__26m__22s"
            android:textColor="@color/timer_hint"
            android:textSize="@dimen/text_14" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/cardIfarTime"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/card"
        android:orientation="horizontal"
        android:padding="@dimen/space_8"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cardconstipationTime">

        <TextView
            android:id="@+id/txtIftarTime"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="start"
            android:text="@string/the_remaining_time_for_iftar"
            android:textColor="@color/time_hint"
            android:textSize="@dimen/text_14" />

        <TextView
            android:id="@+id/timeIftar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:text="@string/total_time_for_iftar"
            android:textColor="@color/timer_hint"
            android:textSize="@dimen/text_14" />
    </LinearLayout>


    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/large_image"
        android:layout_width="wrap_content"
        android:layout_height="550dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/ramadhankareem" />


    <TextView
        android:id="@+id/textWelcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="46dp"
        android:fontFamily="monospace"
        android:text="@string/welcomeString"
        android:textColor="@color/black"
        android:textSize="@dimen/text_26"
        app:layout_constraintBottom_toBottomOf="@id/large_image"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/athan_times"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_8"
        android:fontFamily="monospace"
        android:text="@string/athan_times"
        android:textColor="@color/title_hint"
        android:textSize="@dimen/text_16"
        android:visibility="invisible"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lottieBreakFast" />

</androidx.constraintlayout.motion.widget.MotionLayout>